profiling-using-exp-runner/backup_FINAL_RESULTS/fibonacci_experiment_2/run_1_repetition_0/energibridge.log
sampling interval: 200, target function: fibonacci_cache, input size: 10
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.fibonacci as module; X = 10; module.fibonacci_cache(X); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 11.755096347808838 for 0.2359152 sec of execution.
